<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageFragment">


    <TextView
        android:id="@+id/fragmentMessageText"
        android:layout_width="206dp"
        android:layout_height="29dp"
        android:gravity="right"
        android:text="@string/MessageHere" />

    <TextView
        android:id="@+id/fragmentMessageID"
        android:layout_width="213dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@+id/fragmentMessageText"
        android:layout_marginBottom="-131dp"
        android:gravity="right"
        android:text="@string/id" />

    <Button
        android:id="@+id/deleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/delete_this_message" />
</RelativeLayout>